# securities-analytics

./: .gitignore  CALLABLE_FIX_TO_FLOAT_GUIDE.md  CLAUDE.md  IMPLEMENTATION_PLAN_FIX_TO_FLOAT.md  INTEGRATION_GUIDE.md  README.md  ROADMAP.md  SNOWFLAKE_INTEGRATION_PLAN.md  SNOWFLAKE_INTEGRATION_README.md  SOFR_FUTURES_IMPLEMENTATION_PLAN.md  TECHNICAL_GUIDE.md  pyproject.toml  quantlib-docs.txt  quantlib-reference.md
docs/: CONSOLIDATION_SUMMARY.md  SNOWFLAKE_VALIDATION_GUIDE.md
docs/archive/: FIX_TO_FLOAT_DOCUMENTATION.md  PROJECT_SUMMARY.md  REPOSITORY_OVERVIEW.md  quantlib-docs.txt
examples/: snowflake_integration.py  snowflake_oauth_integration.py
securities_analytics/bonds/analytics/: spreads.py
securities_analytics/bonds/base/: bond.py  scheduler.py
securities_analytics/bonds/fix_to_float/: bond.py
securities_analytics/bonds/floating_rate/: __init__.py  bond.py
securities_analytics/curves/: __init__.py
securities_analytics/curves/sofr/: __init__.py  builder.py  curve.py  (+2 more)
securities_analytics/data_providers/: __init__.py
securities_analytics/market_data/: __init__.py  data_models.py  service.py
securities_analytics/models/: hullwhite_1f.py
securities_analytics/validation/: __init__.py  metrics.py  validator.py
tests/curves/: __init__.py  test_sofr_curve.py
tests/data/: active_treasury_curve.csv  sofr_curve.csv  swaption_vols.csv
tests/market_data/: test_data_models.py  test_integration.py  test_market_data_service.py  test_mock_provider.py
tests/models/: test_hullwhite_1f.py
tests/validation/: test_metrics.py  test_validator_mock.py
(+23 files in other folders)
